2010-04-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkPort.h         Make sure that tkWinPort.h is always included
	* generic/tkIntXlibDecls.h before tcl.h, otherwise the fallback for TCHAR
	* win/tkWinPort.h          might go off before the inclusion of <tchar.h>
	* win/tkWinDialog.c        Define OPENFILENAME_SIZE_VERSION_400 if needed
	* compat/stdlib.h          Include <tcl.h> only when not already done.
	* compat/unistd.h
	* generic/tkInt.h          tkPort.h already includes tk.h, which includes tcl.h
	* generic/tk3d.h           Always use #include "tkInt.h", not <tkInt.h>
	* generic/tkColor.h
	* xlib/xcolors.c
	* xlib/xgc.c

2010-04-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c   Fix [Bug 2987995]: Tk_GetOpenFile returns garbage
	under described circumstances
	* win/tkWinDialog.c   [Patch 2898255]: Filenames limit with Tk_GetFileName()
	Assure modern style dialogs where available

2010-04-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinPort.h     Fix [Patch 2986105]: conditionally defining
	strcasecmp/strncasecmp

2010-04-12  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPNG.c (WriteIDAT): [Bug 2984787]: Use the correct
	flushing semantics when handling the last data from the image. Without
	this, many PNG readers (notably including Firefox) refuse to show the
	image and instead complain about errors.
	(ReadIDAT): Added sanity checks to ensure that when we've got bad data
	of the sorts of forms we were previously generating, we detect it and
	error out rather than silently failing.
	(WriteExtraChunks): New function to write in some basic metadata.

2010-04-09  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/photo.n:    Follow-up to [Bug 2983824]: update doc.

2010-04-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgPhoto.c (ImgPhotoCmd): [Bug 2983824]: Use the file
	extension to guess the output format to use if one isn't specified.

2010-04-08  Jan Nijtmans  <nijtmans@users.sf.net>
